--- a/initial_analysis.ipynb
+++ b/initial_analysis.ipynb
@@ -2097,6 +2097,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "per-file Hz: [np.float64(6410.3), np.float64(6410.3), np.float64(6410.3), np.float64(6410.3), np.float64(6410.3)] mean: 6410.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import glob, pandas as pd, numpy as np\n",
+    "paths = sorted(glob.glob(f\"/home/vault/iwi5/iwi5305h/new_dataset_90kv/all/replica_*.parquet\"))[:5]\n",
+    "rates = []\n",
+    "for p in paths:\n",
+    "    df = pd.read_parquet(p)\n",
+    "    lvl1 = df.columns.get_level_values(1)\n",
+    "    time_col = df.columns[lvl1.str.contains(\"Zeitpunkt\", na=False)][0]\n",
+    "    t = df[time_col].to_numpy(dtype=float)\n",
+    "    dt = np.diff(t)\n",
+    "    rates.append(1.0 / np.median(dt))\n",
+    "print(\"per-file Hz:\", [round(r,1) for r in rates], \"mean:\", round(float(np.mean(rates)),1))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
